--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,11 @@ ignore = U101, W503, SCS108, N812, D107
 inline-quotes = double
 
 per-file-ignores =
-	data.py: PIE786
-        migrate.py: SCS113
-        operations.py: PIE798
+	graphs/file_import/__init__.py: PIE786
+	graphs/data.py: PIE786
+	graphs/file_io.py: A001
+        graphs/migrate.py: SCS113
+        graphs/operations.py: PIE798
 exclude =
         _build
 
