--- a/data/se.sjoerd.Graphs.service.in
+++ b/data/se.sjoerd.Graphs.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=@APPLICATION_ID@
-Exec=@BINDIR@/@PROJECT_NAME@ --gapplication-service
+Exec=@BINDIR@/graphs --gapplication-service
