--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 count = True
 #default_ignorelist: E121,E123,E126,E226,E24,E704,W503,W504
-ignore = U101, W503, SCS108, N812, D107
+ignore = U101, W503, SCS108, N812, D107, SIM300
 inline-quotes = double
 
 per-file-ignores =
