--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,7 @@ dependencies = [
   dependency('gtk4'),
   dependency('libadwaita-1', version: '>= 1.8.0'),
   dependency('gee-0.8'),
+  dependency('sqlite3'),
 ]
 
 valac = meson.get_compiler('vala')
