--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -39,7 +39,7 @@ graphs/file_import/parsers/columns.vala
 graphs/file_import/parsers/columns.py
 graphs/file_import/parsers/project.py
 graphs/file_import/parsers/sql.py
-graphs/file_import/parsers/vala.py
+graphs/file_import/parsers/sql.vala
 graphs/file_import/parsers/xrdml.py
 graphs/file_import/parsers/xry.py
 graphs/file_import/__init__.py
