Add warning dialog when opening a legacy project
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/data/meson.build
+++ b/data/meson.build
@@ -72,6 +72,7 @@ endif
 blueprint_files = [
   'ui/dialogs/delete-style.blp',
   'ui/dialogs/invalid-project.blp',
+  'ui/dialogs/legacy-migration-disallowed.blp',
   'ui/dialogs/reset-import-settings.blp',
   'ui/dialogs/save-project-changes.blp',
   'ui/dialogs/save-style-changes.blp',
