Add warning dialog when opening a beta project
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/data/meson.build
+++ b/data/meson.build
@@ -70,6 +70,7 @@ if compile_schemas.found()
 endif
 
 blueprint_files = [
+  'ui/dialogs/beta-disallowed.blp',
   'ui/dialogs/delete-style.blp',
   'ui/dialogs/invalid-project.blp',
   'ui/dialogs/legacy-migration-disallowed.blp',
