Add warning dialog when opening a legacy and/or beta project

--- a/data/meson.build
+++ b/data/meson.build
@@ -70,8 +70,10 @@ if compile_schemas.found()
 endif
 
 blueprint_files = [
+  'ui/dialogs/beta-disallowed.blp',
   'ui/dialogs/delete-style.blp',
   'ui/dialogs/invalid-project.blp',
+  'ui/dialogs/legacy-migration-disallowed.blp',
   'ui/dialogs/reset-import-settings.blp',
   'ui/dialogs/save-project-changes.blp',
   'ui/dialogs/save-style-changes.blp',
