--- a/data/meson.build
+++ b/data/meson.build
@@ -89,6 +89,7 @@ blueprint_files = [
   'ui/sidebar/figure-settings/style-page.blp',
   'ui/sidebar/edit-item.blp',
   'ui/sidebar/main.blp',
+  'ui/sidebar/operations.blp',
   'ui/add-equation.blp',
   'ui/add-style.blp',
   'ui/curve-fitting.blp',
@@ -96,7 +97,6 @@ blueprint_files = [
   'ui/fitting-parameters.blp',
   'ui/generate-data.blp',
   'ui/item-box.blp',
-  'ui/operations.blp',
   'ui/smoothen-settings.blp',
   'ui/style-color-box.blp',
   'ui/style-editor-box.blp',
