--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -19,6 +19,7 @@ data/ui/sidebar/figure-settings/settings-page.blp
 data/ui/sidebar/figure-settings/style-page.blp
 data/ui/sidebar/edit-item.blp
 data/ui/sidebar/main.blp
+data/ui/sidebar/operations.blp
 data/ui/add-equation.blp
 data/ui/add-style.blp
 data/ui/curve-fitting.blp
@@ -26,7 +27,6 @@ data/ui/export-figure.blp
 data/ui/fitting-parameters.blp
 data/ui/generate-data.blp
 data/ui/item-box.blp
-data/ui/operations.blp
 data/ui/smoothen-settings.blp
 data/ui/style-color-box.blp
 data/ui/style-editor-box.blp
