--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -62,7 +62,7 @@ graphs_lib = shared_library('graphs',
     'sidebar/operations.vala',
     'style_editor/color_box.vala',
     'style_editor/color_manager.vala',
-    'style_editor/editor.vala',
+    'style_editor/window.vala',
     'actions.vala',
     'add_equation.vala',
     'application.vala',
