Add Style Grid to Style Editor

--- a/data/meson.build
+++ b/data/meson.build
@@ -90,6 +90,10 @@ blueprint_files = [
   'ui/sidebar/edit-item.blp',
   'ui/sidebar/main.blp',
   'ui/sidebar/operations.blp',
+  'ui/style-editor/color-box.blp',
+  'ui/style-editor/editor-box.blp',
+  'ui/style-editor/shortcuts.blp',
+  'ui/style-editor/window.blp',
   'ui/add-equation.blp',
   'ui/add-style.blp',
   'ui/curve-fitting.blp',
@@ -98,10 +102,6 @@ blueprint_files = [
   'ui/generate-data.blp',
   'ui/item-box.blp',
   'ui/smoothen-settings.blp',
-  'ui/style-color-box.blp',
-  'ui/style-editor-box.blp',
-  'ui/style-editor-shortcuts.blp',
-  'ui/style-editor-window.blp',
   'ui/style-preview.blp',
   'ui/transform.blp',
   'ui/window.blp',
