--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -20,6 +20,10 @@ data/ui/sidebar/figure-settings/style-page.blp
 data/ui/sidebar/edit-item.blp
 data/ui/sidebar/main.blp
 data/ui/sidebar/operations.blp
+data/ui/style-editor/color-box.blp
+data/ui/style-editor/editor-box.blp
+data/ui/style-editor/shortcuts.blp
+data/ui/style-editor/window.blp
 data/ui/add-equation.blp
 data/ui/add-style.blp
 data/ui/curve-fitting.blp
@@ -28,10 +32,6 @@ data/ui/fitting-parameters.blp
 data/ui/generate-data.blp
 data/ui/item-box.blp
 data/ui/smoothen-settings.blp
-data/ui/style-color-box.blp
-data/ui/style-editor-box.blp
-data/ui/style-editor-shortcuts.blp
-data/ui/style-editor-window.blp
 data/ui/style-preview.blp
 data/ui/transform.blp
 data/ui/window.blp
@@ -51,6 +51,11 @@ graphs/sidebar/edit_item.vala
 graphs/sidebar/figure_settings.vala
 graphs/sidebar/main.vala
 graphs/sidebar/operations.vala
+graphs/style_editor/color_box.vala
+graphs/style_editor/color_manager.vala
+graphs/style_editor/editor_box.py
+graphs/style_editor/__init__.py
+graphs/style_editor/window.vala
 graphs/actions.vala
 graphs/add_equation.vala
 graphs/application.py
@@ -81,8 +86,6 @@ graphs/python_helper.py
 graphs/python_helper.vala
 graphs/scales.py
 graphs/smoothen_settings.vala
-graphs/style_editor.py
-graphs/style_editor.vala
 graphs/style_io.py
 graphs/styles.py
 graphs/styles.vala
