surpress B042 in project.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ per-file-ignores =
 	graphs/file_io.py: A001
         graphs/migrate.py: SCS113
         graphs/operations.py: PIE798
+	graphs/project.py: B042
 exclude =
         _build
 
