--- a/data/meson.build
+++ b/data/meson.build
@@ -81,10 +81,12 @@ blueprint_files = [
   'ui/edit-item/data.blp',
   'ui/edit-item/equation.blp',
   'ui/edit-item/generated-data.blp',
+  'ui/import/columns/box.blp',
+  'ui/import/columns/item-group.blp',
+  'ui/import/columns/main-group.blp',
+  'ui/import/sql/main-group.blp',
   'ui/import/dialog.blp',
   'ui/import/file-row.blp',
-  'ui/import/mode-columns.blp',
-  'ui/import/mode-sql.blp',
   'ui/sidebar/figure-settings/settings-page.blp',
   'ui/sidebar/figure-settings/style-page.blp',
   'ui/sidebar/edit-item.blp',
