--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -87,7 +87,7 @@ graphs_lib = shared_library('graphs',
     'transform.vala',
     'utilities.vala',
     'window.vala',
-  ), gresource_bundle,
+  ), gresource,
              vala_gir: 'Graphs-1.gir',
          dependencies: dependencies + config_dep,
   include_directories: include_directories('.'),
