refactor style editor box
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -64,9 +64,10 @@ graphs_lib = shared_library('graphs',
     'sidebar/main.vala',
     'sidebar/operations.vala',
     'style_editor/add_style.vala',
-    'style_editor/color_box.vala',
     'style_editor/color_manager.vala',
+    'style_editor/color_row.vala',
     'style_editor/editor_box.vala',
+    'style_editor/item_color_row.vala',
     'style_editor/window.vala',
     'actions.vala',
     'add_equation.vala',
