--- a/data/meson.build
+++ b/data/meson.build
@@ -92,12 +92,12 @@ blueprint_files = [
   'ui/sidebar/edit-item.blp',
   'ui/sidebar/main.blp',
   'ui/sidebar/operations.blp',
+  'ui/style-editor/add-style.blp',
   'ui/style-editor/color-box.blp',
   'ui/style-editor/editor-box.blp',
   'ui/style-editor/shortcuts.blp',
   'ui/style-editor/window.blp',
   'ui/add-equation.blp',
-  'ui/add-style.blp',
   'ui/curve-fitting.blp',
   'ui/export-figure.blp',
   'ui/fitting-parameters.blp',
