--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -63,6 +63,7 @@ graphs_lib = shared_library('graphs',
     'sidebar/figure_settings.vala',
     'sidebar/main.vala',
     'sidebar/operations.vala',
+    'style_editor/add_style.vala',
     'style_editor/color_box.vala',
     'style_editor/color_manager.vala',
     'style_editor/window.vala',
