--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -65,6 +65,7 @@ graphs_lib = shared_library('graphs',
     'sidebar/operations.vala',
     'style_editor/color_box.vala',
     'style_editor/color_manager.vala',
+    'style_editor/editor_box.vala',
     'style_editor/window.vala',
     'actions.vala',
     'add_equation.vala',
@@ -86,7 +87,7 @@ graphs_lib = shared_library('graphs',
     'transform.vala',
     'utilities.vala',
     'window.vala',
-  ), gresource_bundle,
+  ), gresource,
              vala_gir: 'Graphs-1.gir',
          dependencies: dependencies + config_dep,
   include_directories: include_directories('.'),
