Use help.gnome.org for stable branch
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/meson.build
+++ b/meson.build
@@ -24,7 +24,7 @@ copyright = '2022 - 2024'
 homepage_url = 'https://apps.gnome.org/Graphs/'
 vcs_url = 'https://gitlab.gnome.org/World/Graphs'
 issue_url = vcs_url + '/issues'
-help_url = 'https://world.pages.gitlab.gnome.org/Graphs/help/'
+help_url = 'https://help.gnome.org/graphs/'
 author = 'Sjoerd Stendahl et al.'
 
 i18n = import('i18n')
