--- a/data/se.sjoerd.Graphs.appdata.xml.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in
@@ -54,6 +54,11 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="1.8.6" date="2025-12-02">
+      <description>
+        <p>Minor update, offering some language updates.</p>
+      </description>
+    </release>
     <release version="1.8.5" date="2025-07-29">
       <description>
         <p>Minor update</p>
