add rmse measure

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ inline-quotes = double
 
 per-file-ignores =
 	graphs/file_import/__init__.py: PIE786
+	graphs/curve_fitting.py: PIE786
 	graphs/data.py: PIE786
 	graphs/file_io.py: A001
         graphs/migrate.py: SCS113
