--- a/data/se.sjoerd.Graphs.appdata.xml.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in
@@ -54,6 +54,11 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="1.8.7" date="2026-01-05">
+      <description>
+        <p>Minor update, allowing for compatibility with Python 3.14.</p>
+      </description>
+    </release>
     <release version="1.8.6" date="2025-12-02">
       <description>
         <p>Minor update, offering some language updates.</p>
