--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ include:
 .vars:
   image: quay.io/gnome_infrastructure/gnome-runtime-images:gnome-49
   variables:
-    MANIFEST_PATH: se.sjoerd.Graphs.json
+    MANIFEST_PATH: build-aux/flatpak/se.sjoerd.Graphs.json
     FLATPAK_MODULE: graphs
     APP_ID: se.sjoerd.Graphs
     RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
